Added user api